Correct typos and add more documentation