@@ -1,8 +1,9 @@
 package org.firstinspires.ftc.teamcode;
 
+import java.io.IOException;
+import java.nio.file.*;
+
 import android.os.Environment;
-import java.nio.file;
-import java.nio.file.Path;
 
 public class FileManager {
     // The directory that save the current season's storage files.
@@ -10,12 +11,15 @@ public class FileManager {
 
     /**
      * Writes a String to a text file inside this season's directory.
+     * Creates the file if it does not already exist
      *
-     * @param fileName
-     * @param inputString
+     * @param fileName The name of the file being written to.
+     * @param inputString The String that is written to the file
      * @return Whether the String was successfully written to the file.
+     * @throws FileAlreadyExistsException Failed to create the output file due to it already existing.
+     * @throws IOException Failed to create or write to the output file. 
      */
-    public static boolean writeToFile(Path fileName, String inputString) {
+    public static boolean writeToFile(Path fileName, String inputString) throws FileAlreadyExistsException, IOException {
         // If this season's directory does not exist, create it.
         if (!Files.exists(seasonDirectory)) {
             Files.createDirectory(seasonDirectory);
@@ -33,7 +37,7 @@ public class FileManager {
             return false;
         }
 
-        Files.write(writeFile, inputString);
+        Files.writeString(writeFile, inputString);
         return true;
     }
 
@@ -43,8 +47,9 @@ public class FileManager {
      * @param fileName
      * @return The String contained within the text file.
      *         If an error occurs, null is returned.
+     * @throws IOException Failed to read the input file
      */
-    public static String readFromFile(Path fileName) {
+    public static String readFromFile(Path fileName) throws IOException {
         Path readFile = seasonDirectory.resolve(fileName);
 
         if (Files.exists(readFile)) {
